--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/jeffreybare30/Node#readme",
   "dependencies": {
     "lodash": "^4.17.11",
+    "npm": "^6.12.1",
+    "start": "^5.1.0",
     "yargs": "^11.0.0"
   }
 }
